update use textComponents, since we rely on paper anyway